--- a/index.html
+++ b/index.html
@@ -563,25 +563,99 @@
       },
 
       /* --- Casual / conversational keywords (~25) --- */
- "hello":{definition:"Namaste 🙏! Main NYAI hoon, aapka legal dost. Kya poochna chahoge?",articles:["IPC Basics","Fundamental Rights","FIR Procedure"]},
-      "hi":{definition:"Hi 👋! Kaise ho? Kanoon se related kuch poochna hai?",articles:["Indian Constitution","Bail Explained","Rights in India"]},
-      "hey":{definition:"Hey 😃! Batao, kis topic pe baat karni hai?",articles:["IPC Sections","Fundamental Rights","Supreme Court Cases"]},
-      "namaste":{definition:"Namaste 🙏! Main NYAI hoon, kanoon ko easy banane ke liye.",articles:["Intro to Constitution","Your Legal Rights","FIR Basics"]},
-      "thanks":{definition:"Koi baat nahi 😇, main hamesha help ke liye yahan hoon.",articles:["What is IPC?","Fundamental Rights","Bail Procedures"]},
-      "thank you":{definition:"Aapka shukriya 🙏! Mujhe khushi hui help karke.",articles:["Supreme Court Judgments","Human Rights","Constitution Basics"]},
-      "good morning":{definition:"Good Morning 🌞! Aaj kaun sa legal topic samajhna hai?",articles:["Fundamental Rights","IPC Basics","Bail Explained"]},
-      "good night":{definition:"Good Night 🌙! Kal fir se kanoon ki baatein karenge.",articles:["Constitution Amendments","Bail Cases","Rights Overview"]},
-      "ok":{definition:"Ok 👍, main ready hoon.",articles:["IPC Sections","Fundamental Rights","Legal Rights"]},
-      "cool":{definition:"Cool 😎! Chalo kanoon explore karte hain.",articles:["IPC & CrPC","Fundamental Duties","Bail Info"]},
-      "nice":{definition:"Nice 👍! Ab bolo kis bare me jaana hai?",articles:["FIR Procedure","Rights Explained","Constitution"]},
-      "great":{definition:"Great 🎉! Main ready hoon aapke legal sawaalon ke liye.",articles:["IPC Basics","Human Rights","Supreme Court"]},
-      "how are you":{definition:"Main theek hoon 🤖, aap kaise ho?",articles:["Your Rights","Constitution","Bail"]},
-      "who are you":{definition:"Main NYAI hoon, ek Indian Legal AI Assistant.",articles:["About IPC","Know Your Rights","Constitution Basics"]},
-      "your name":{definition:"Mera naam NYAI hai ⚖️.",articles:["Legal Rights","Supreme Court Cases","Fundamental Duties"]},
-      "bye":{definition:"Bye 👋, apna khayal rakhna!",articles:["IPC Summary","Rights in India","Constitution"]},
-      "see you":{definition:"See you soon 👋!",articles:["IPC Essentials","Your Rights","Supreme Court"]},
-      "take care":{definition:"Take care 🙏, safe raho.",articles:["IPC Law","Constitution","Human Rights"]},
-      "what’s up":{definition:"Sab mast hai 😄, aap batao?",articles:["IPC Cases","FIR Info","Rights in India"]}
+      "hello":{
+        definition:"Namaste 🙏! Main NYAI hoon, aapka legal dost. Kya poochna chahoge?",
+        articles:["IPC Basics","Fundamental Rights","FIR Procedure"]
+    },
+      "hi":{
+        definition:"Hi 👋! Kaise ho? Kanoon se related kuch poochna hai?",
+        articles:["Indian Constitution","Bail Explained","Rights in India"]
+    },
+      "hey":{
+        definition:"Hey 😃! Batao, kis topic pe baat karni hai?",
+        articles:["IPC Sections","Fundamental Rights","Supreme Court Cases"]
+    },
+      "namaste":{
+        
+        definition:"Namaste 🙏! Main NYAI hoon, kanoon ko easy banane ke liye.",
+        articles:["Intro to Constitution","Your Legal Rights","FIR Basics"]
+
+      },
+      "thanks":{
+        definition:"Koi baat nahi 😇, main hamesha help ke liye yahan hoon.",
+        articles:["What is IPC?","Fundamental Rights","Bail Procedures"]
+
+      },
+      "thank you":{
+        definition:"Aapka shukriya 🙏! Mujhe khushi hui help karke.",
+        articles:["Supreme Court Judgments","Human Rights","Constitution Basics"]
+
+      },
+      "good morning":{
+        definition:"Good Morning 🌞! Aaj kaun sa legal topic samajhna hai?",
+        articles:["Fundamental Rights","IPC Basics","Bail Explained"]
+
+      },
+      "good night":{
+        definition:"Good Night 🌙! Kal fir se kanoon ki baatein karenge.",
+        articles:["Constitution Amendments","Bail Cases","Rights Overview"]
+
+      },
+      "ok":{
+        definition:"Ok 👍, main ready hoon.",
+        articles:["IPC Sections","Fundamental Rights","Legal Rights"]
+
+      },
+      "cool":{
+        definition:"Cool 😎! Chalo kanoon explore karte hain.",
+        articles:["IPC & CrPC","Fundamental Duties","Bail Info"]
+
+      },
+      "nice":{
+        definition:"Nice 👍! Ab bolo kis bare me jaana hai?",
+        articles:["FIR Procedure","Rights Explained","Constitution"]
+
+      },
+      "great":{
+        definition:"Great 🎉! Main ready hoon aapke legal sawaalon ke liye.",
+        articles:["IPC Basics","Human Rights","Supreme Court"]
+
+      },
+      "how are you":{
+        definition:"Main theek hoon 🤖, aap kaise ho?",
+        articles:["Your Rights","Constitution","Bail"]
+
+      },
+      "who are you":{
+        definition:"Main NYAI hoon, ek Indian Legal AI Assistant.",
+        articles:["About IPC","Know Your Rights","Constitution Basics"]
+
+      },
+      "your name":{
+        definition:"Mera naam NYAI hai ⚖️.",
+        articles:["Legal Rights","Supreme Court Cases","Fundamental Duties"]
+
+      },
+      "bye":{
+        definition:"Bye 👋, apna khayal rakhna!",
+        articles:["IPC Summary","Rights in India","Constitution"]
+
+      },
+      "see you":{
+        definition:"See you soon 👋!",
+        articles:["IPC Essentials","Your Rights","Supreme Court"]
+
+      },
+      "take care":{
+        definition:"Take care 🙏, safe raho.",
+        articles:["IPC Law","Constitution","Human Rights"]
+
+      },
+      "what’s up":{
+        definition:"Sab mast hai 😄, aap batao?",
+        articles:["IPC Cases","FIR Info","Rights in India"]
+
+      }
     };
       
       const addMessage = (content, sender = 'bot') => {
